--- a/app/src/main/res/layout-v26/activity_add_course.xml
+++ b/app/src/main/res/layout-v26/activity_add_course.xml
@@ -68,13 +68,13 @@
                     tools:ignore="ContentDescription" />
 
                 <ImageView
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
                     android:id="@+id/btnAddCourseImage"
-                    android:src="@drawable/icon_add_photo"
-                    android:tint="@color/colorAccent"
+                    android:layout_width="34dp"
+                    android:layout_height="40dp"
                     android:layout_gravity="end"
                     android:layout_margin="12dp"
+                    android:src="@drawable/icon_add_photo"
+                    app:tint="@color/colorAccent"
                     tools:ignore="ContentDescription" />
 
             </FrameLayout>
@@ -139,6 +139,51 @@
                 android:id="@+id/textCategoriesSelected"
                 android:visibility="gone"/>
 
+            <HorizontalScrollView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <com.google.android.material.chip.ChipGroup
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/selectedCategoriesDisplayGroup"
+                    style="@style/MaterialTheme"
+                    android:theme="@style/MaterialTheme"
+                    app:singleLine="true">
+                    <com.google.android.material.chip.Chip
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        style="@style/Widget.MaterialComponents.Chip.Entry"
+                        android:text="@string/app_name"
+                        android:textSize="@dimen/text_margin"
+                        android:checkable="false"
+                        app:closeIconEnabled="true"/>
+                    <com.google.android.material.chip.Chip
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        style="@style/Widget.MaterialComponents.Chip.Entry"
+                        android:text="@string/app_name"
+                        android:textSize="@dimen/text_margin"
+                        android:checkable="false"
+                        app:closeIconEnabled="true"/>
+                    <com.google.android.material.chip.Chip
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        style="@style/Widget.MaterialComponents.Chip.Entry"
+                        android:text="@string/app_name"
+                        android:textSize="@dimen/text_margin"
+                        android:checkable="false"
+                        app:closeIconEnabled="true"/>
+                    <com.google.android.material.chip.Chip
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        style="@style/Widget.MaterialComponents.Chip.Entry"
+                        android:text="@string/app_name"
+                        android:textSize="@dimen/text_margin"
+                        android:checkable="false"
+                        app:closeIconEnabled="true"/>
+                </com.google.android.material.chip.ChipGroup>
+            </HorizontalScrollView>
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -170,6 +215,7 @@
                     android:layout_weight="50"
                     android:textAlignment="textEnd"
                     android:paddingEnd="@dimen/activity_horizontal_margin"
+                    android:paddingStart="10dp"
                     tools:ignore="RtlCompat,RtlSymmetry" />
 
             </LinearLayout>
@@ -385,10 +431,11 @@
         android:layout_marginBottom="4dp"
         android:layout_alignParentBottom="true"
         android:progress="50"
-        android:progressTint="@color/colorPrimary"
+        android:progressTint="@color/colorRed"
         android:progressBackgroundTint="@color/colorGrey"
         android:id="@+id/add_course_progress"
-        android:scaleY="3"/>
+        android:scaleY="2"/>
+
 
     <Button
         android:id="@+id/btnNext"
