--- a/app/src/main/res/layout-v26/activity_add_course.xml
+++ b/app/src/main/res/layout-v26/activity_add_course.xml
@@ -128,6 +128,7 @@
                 android:orientation="horizontal"
                 android:id="@+id/categories_list_add_course"
                 tools:listitem="@layout/filter_card"/> -->
+            <!--
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -137,7 +138,7 @@
                 android:layout_marginVertical="4dp"
                 android:textColor="@color/colorWhite"
                 android:id="@+id/textCategoriesSelected"
-                android:visibility="gone"/>
+                android:visibility="gone"/> -->
 
             <HorizontalScrollView
                 android:layout_width="match_parent"
