--- a/app/src/main/res/layout/activity_explore_courses.xml
+++ b/app/src/main/res/layout/activity_explore_courses.xml
@@ -47,22 +47,41 @@
             android:text="TOP ONLINE"/>
     </com.google.android.material.tabs.TabLayout>
 
+    <!--
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:id="@+id/filter_categories_list"
         android:layout_below="@id/tabLayout"
-        android:layout_marginTop="12dp"
+        android:layout_marginVertical="12dp"
         tools:listitem="@layout/filter_card"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/> -->
+
+    <HorizontalScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/scroller"
+        android:layout_below="@id/tabLayout"
+        android:layout_marginVertical="10dp"
+        android:layout_marginHorizontal="10dp">
+        <com.google.android.material.chip.ChipGroup
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/search_tags_group"
+            app:lineSpacing="5dp"
+            app:itemSpacing="10dp"
+            android:theme="@style/MaterialTheme"
+            app:singleLine="true">
+        </com.google.android.material.chip.ChipGroup>
+    </HorizontalScrollView>
 
 
     <androidx.viewpager.widget.ViewPager
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/viewPager"
-        android:layout_below="@id/filter_categories_list"
+        android:layout_below="@id/scroller"
         android:isScrollContainer="true"/>
     <!-- this one was a page index : may be needed later on ====
     <LinearLayout
