--- a/app/src/main/res/menu/home_drawer_menu.xml
+++ b/app/src/main/res/menu/home_drawer_menu.xml
@@ -19,6 +19,9 @@
         android:title="Title 5"
         android:id="@+id/homeDrawerMenuItem5"/>
     <item
+        android:title="Upsilon Wallet"
+        android:id="@+id/homeDrawerMenuItem6"/>
+    <item
         android:title="@string/more"
         android:id="@+id/more">
         <menu>
