--- a/app/src/main/res/layout/activity_wallet.xml
+++ b/app/src/main/res/layout/activity_wallet.xml
@@ -35,12 +35,13 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="The amount that you can withdraw to your bank account"
+                    android:text="The amount that you can withdraw to your bank account "
                     android:textColor="#323232"
                     android:textStyle="italic"
                     android:textSize="12sp"
                     android:gravity="center"
-                    android:padding="5dp"/>
+                    android:paddingVertical="5dp"
+                    android:paddingHorizontal="8dp"/>
                 <TextView
                     android:id="@+id/current_balance"
                     android:layout_width="wrap_content"
@@ -95,7 +96,8 @@
                     android:textStyle="italic"
                     android:textSize="12sp"
                     android:gravity="center"
-                    android:padding="5dp"/>
+                    android:paddingVertical="5dp"
+                    android:paddingHorizontal="8dp"/>
                 <TextView
                     android:id="@+id/amount_due"
                     android:layout_width="wrap_content"
