--- a/app/src/main/res/layout/activity_view_course.xml
+++ b/app/src/main/res/layout/activity_view_course.xml
@@ -3,7 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@color/colorLiteGrey">
 
     <ProgressBar
         android:id="@+id/loadingViewCourse"
@@ -79,27 +80,35 @@
                 android:layout_marginEnd="@dimen/activity_horizontal_margin"
                 android:id="@+id/textCourseName" />-->
 
-            <TextView
+            <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:maxHeight="48dp"
-                android:background="@drawable/text_view_add_course"
-                android:textColor="@color/colorBlack"
-                android:textSize="@dimen/text_margin"
-                android:typeface="sans"
-                android:textStyle="italic"
+                android:id="@+id/cardCourseDescription"
                 android:layout_marginTop="@dimen/activity_vertical_margin"
                 android:layout_below="@id/courseCoverCard"
                 android:layout_marginStart="@dimen/activity_horizontal_margin"
                 android:layout_marginEnd="@dimen/activity_horizontal_margin"
-                android:id="@+id/textCourseDescription"
-                android:padding="5dp"/>
+                app:cardBackgroundColor="@color/colorWhite"
+                app:cardCornerRadius="5dp"
+                app:cardElevation="10dp">
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:maxHeight="48dp"
+                    android:textColor="@color/colorBlack"
+                    android:textSize="@dimen/text_margin"
+                    android:typeface="sans"
+                    android:textStyle="italic"
+                    android:id="@+id/textCourseDescription"
+                    android:padding="5dp"/>
+            </androidx.cardview.widget.CardView>
+
 
             <RatingBar
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/courseRatings"
-                android:layout_below="@id/textCourseDescription"
+                android:layout_below="@id/cardCourseDescription"
                 android:numStars="5"
                 android:rating="4"
                 android:stepSize="1"
@@ -108,99 +117,110 @@
                 android:progressTint="@color/colorBlue"
                 android:progressBackgroundTint="@color/colorGrey"/>
 
-            <FrameLayout
+            <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/activity_vertical_margin"
                 android:layout_below="@id/courseRatings"
                 android:layout_marginStart="@dimen/activity_horizontal_margin"
                 android:layout_marginEnd="@dimen/activity_horizontal_margin"
-                android:id="@+id/frameCourseDetails"
-                android:background="@drawable/text_view_add_course">
-
-                <LinearLayout
-                    android:orientation="vertical"
+                app:cardBackgroundColor="@color/colorWhite"
+                app:cardElevation="10dp"
+                app:cardCornerRadius="5dp"
+                android:id="@+id/frameCourseDetails">
+                <FrameLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:padding="10dp">
+                    android:layout_height="wrap_content">
+
                     <LinearLayout
+                        android:orientation="vertical"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal"
-                        android:weightSum="100"
-                        android:gravity="center_vertical">
+                        android:layout_height="match_parent"
+                        android:padding="10dp">
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal"
+                            android:weightSum="100"
+                            android:gravity="center_vertical">
+                            <TextView
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:textColor="@color/colorPrimaryDark"
+                                android:textSize="18sp"
+                                android:typeface="sans"
+                                android:id="@+id/view_course_tutor_name"
+                                android:layout_weight="15"
+                                android:gravity="center_vertical"/>
+                            <ImageButton
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:id="@+id/view_course_tutor_info"
+                                android:src="@drawable/info_icon_dark"
+                                android:layout_weight="85"
+                                android:backgroundTint="#00000000"
+                                android:tint="@color/colorPrimary"
+                                android:gravity="end"
+                                android:contentDescription="@string/info_about_course_instructor"
+                                android:clickable="true"
+                                android:focusable="true"/>
+                        </LinearLayout>
+
                         <TextView
                             android:layout_width="match_parent"
-                            android:layout_height="match_parent"
+                            android:layout_height="wrap_content"
+                            android:textColor="@color/colorPrimaryDark"
+                            android:id="@+id/view_course_duration"
+                            android:textSize="18sp"
+                            android:typeface="sans"
+                            android:paddingTop="5dp"
+                            android:paddingBottom="5dp"/>
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal"
+                            android:weightSum="100"
+                            android:gravity="center_vertical">
+                            <TextView
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:textColor="@color/colorPrimaryDark"
+                                android:textSize="18sp"
+                                android:id="@+id/view_course_mode"
+                                android:typeface="sans"
+                                android:gravity="center_vertical"
+                                android:layout_weight="15"/>
+
+                            <ImageButton
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:src="@drawable/icon_location"
+                                android:id="@+id/location_view_course"
+                                android:layout_weight="85"
+                                android:backgroundTint="#00000000"
+                                android:tint="@color/colorPrimary"
+                                android:gravity="end"
+                                android:contentDescription="@string/see_location_of_offline_course"
+                                android:clickable="true"
+                                android:focusable="true"/>
+                        </LinearLayout>
+
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:id="@+id/view_course_fees"
                             android:textColor="@color/colorPrimaryDark"
                             android:textSize="18sp"
                             android:typeface="sans"
-                            android:id="@+id/view_course_tutor_name"
-                            android:layout_weight="15"
-                            android:gravity="center_vertical"/>
-                        <ImageButton
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:id="@+id/view_course_tutor_info"
-                            android:src="@drawable/info_icon_dark"
-                            android:layout_weight="85"
-                            android:backgroundTint="#00000000"
-                            android:tint="@color/colorPrimary"
-                            android:gravity="end"
-                            android:contentDescription="@string/info_about_course_instructor" />
+                            android:paddingTop="5dp"
+                            android:paddingBottom="5dp"/>
                     </LinearLayout>
 
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:textColor="@color/colorPrimaryDark"
-                        android:id="@+id/view_course_duration"
-                        android:textSize="18sp"
-                        android:typeface="sans"
-                        android:paddingTop="5dp"
-                        android:paddingBottom="5dp"/>
+                </FrameLayout>
+            </androidx.cardview.widget.CardView>
 
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal"
-                        android:weightSum="100"
-                        android:gravity="center_vertical">
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:textColor="@color/colorPrimaryDark"
-                            android:textSize="18sp"
-                            android:id="@+id/view_course_mode"
-                            android:typeface="sans"
-                            android:gravity="center_vertical"
-                            android:layout_weight="15"/>
-
-                        <ImageButton
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:src="@drawable/icon_location"
-                            android:id="@+id/location_view_course"
-                            android:layout_weight="85"
-                            android:backgroundTint="#00000000"
-                            android:tint="@color/colorPrimary"
-                            android:gravity="end"
-                            android:contentDescription="@string/see_location_of_offline_course" />
-                    </LinearLayout>
-
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:id="@+id/view_course_fees"
-                        android:textColor="@color/colorPrimaryDark"
-                        android:textSize="18sp"
-                        android:typeface="sans"
-                        android:paddingTop="5dp"
-                        android:paddingBottom="5dp"/>
-                </LinearLayout>
-
-            </FrameLayout>
             <!--
             <TextView
                 android:layout_width="match_parent"
@@ -219,31 +239,48 @@
 
             <androidx.recyclerview.widget.RecyclerView
                 android:layout_width="match_parent"
-                android:layout_height="200dp"
+                android:layout_height="wrap_content"
                 android:id="@+id/listIntroductoryMaterial"
                 android:layout_below="@id/frameCourseDetails"
                 android:orientation="horizontal"
-                android:layout_margin="@dimen/activity_vertical_margin"/>
+                android:layout_margin="@dimen/activity_vertical_margin"
+                tools:listitem="@layout/course_introductory_content_card"
+                tools:itemCount="1"/>
 
-            <TextView
-                android:id="@+id/textReviews"
+            <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/listIntroductoryMaterial"
-                android:text="@string/reviews"
-                android:textSize="18sp"
-                android:textStyle="italic"
-                android:textColor="@color/colorPrimaryDark"
-                android:layout_margin="@dimen/activity_horizontal_margin" />
+                android:layout_margin="@dimen/activity_horizontal_margin"
+                app:cardBackgroundColor="@color/colorWhite"
+                app:cardElevation="10dp"
+                app:cardCornerRadius="5dp">
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                    <TextView
+                        android:id="@+id/textReviews"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@string/reviews"
+                        android:textSize="18sp"
+                        android:textStyle="italic"
+                        android:textColor="@color/colorPrimaryDark"
+                        android:layout_margin="@dimen/activity_vertical_margin"/>
 
-            <androidx.recyclerview.widget.RecyclerView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/listCourseReviews"
-                android:layout_below="@id/textReviews"
-                android:orientation="horizontal"
-                android:visibility="visible"
-                android:layout_margin="@dimen/activity_vertical_margin"/>
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/listCourseReviews"
+                        android:layout_below="@id/textReviews"
+                        android:orientation="horizontal"
+                        android:visibility="visible"
+                        android:layout_margin="@dimen/activity_vertical_margin"
+                        tools:listitem="@layout/course_review_card"/>
+                </RelativeLayout>
+            </androidx.cardview.widget.CardView>
+
+
         </RelativeLayout>
     </ScrollView>
 
