--- a/app/src/main/res/layout/course_review_card.xml
+++ b/app/src/main/res/layout/course_review_card.xml
@@ -1,80 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_gravity="center_horizontal"
-    android:layout_marginTop="3dp"
-    android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:paddingTop="10dp"
+    android:id="@+id/courseReviewCard">
 
-
-    <androidx.cardview.widget.CardView
-
-        android:id="@+id/courseReviewCard"
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:cardCornerRadius="10dp"
-        app:cardElevation="12dp">
+        android:id="@+id/course_review_view"
+        android:textColor="@color/colorPrimaryDark"
+        android:textStyle="bold"
+        android:textSize="@dimen/text_margin"
+        android:gravity="center_vertical"
+        android:paddingStart="20dp"
+        android:paddingTop="5dp"
+        android:paddingBottom="5dp"
+        tools:ignore="RtlSymmetry" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:paddingTop="10dp"
-            android:background="@color/colorLiteGrey">
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/course_review_rating"
+        android:textColor="@color/colorPrimaryDark"
+        android:textStyle="bold"
+        android:text="Editor's Choice"
+        android:textSize="@dimen/text_margin"
+        android:gravity="center_vertical"
+        android:paddingStart="20dp"
+        android:paddingEnd="20dp"
+        android:paddingTop="5dp"
+        android:paddingBottom="5dp"
+        tools:ignore="RtlSymmetry"
+        android:drawablePadding="5dp"
+        app:drawableStartCompat="@drawable/icon_star_dark"
+        app:drawableTint="@color/colorPrimary" />
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/course_review_view"
-                android:textColor="@color/colorPrimaryDark"
-                android:textStyle="bold"
-                android:textSize="@dimen/text_margin"
-                android:text="My NAME IS KHAN"
-                android:gravity="center_vertical"
-                android:paddingStart="20dp"
-                android:paddingTop="5dp"
-                android:paddingBottom="5dp"
-                tools:ignore="RtlSymmetry" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/course_review_rating"
-                android:textColor="@color/colorPrimaryDark"
-                android:textStyle="bold"
-                android:textSize="@dimen/text_margin"
-                android:text="3.5/5"
-                android:gravity="center_vertical"
-                android:paddingStart="20dp"
-                android:paddingEnd="20dp"
-                android:paddingTop="5dp"
-                android:paddingBottom="5dp"
-                tools:ignore="RtlSymmetry"
-                android:drawableEnd="@drawable/icon_star_dark"
-                android:drawableTint="@color/colorPrimary"
-                android:drawablePadding="5dp"/>
-
-            <TextView
-                android:id="@+id/course_review_name"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textColor="@color/colorPrimaryDark"
-                android:textStyle="italic"
-                android:textSize="@dimen/text_margin"
-                android:gravity="center_vertical"
-                android:paddingStart="20dp"
-                android:paddingEnd="20dp"
-                android:paddingTop="5dp"
-                android:paddingBottom="5dp"
-                tools:ignore="RtlSymmetry"
-                android:text="Absolutely Excellent course with a really good instructor! Enjoyed really very much."/>
-        </LinearLayout>
-
-    </androidx.cardview.widget.CardView>
-
-
-</RelativeLayout>
-
+    <TextView
+        android:id="@+id/course_review_name"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textColor="@color/colorPrimaryDark"
+        android:textStyle="italic"
+        android:textSize="@dimen/text_margin"
+        android:gravity="center_vertical"
+        android:paddingStart="20dp"
+        android:paddingEnd="20dp"
+        android:paddingTop="5dp"
+        android:paddingBottom="5dp"
+        tools:ignore="RtlSymmetry"/>
+</LinearLayout>
