--- a/app/src/main/res/drawable/frame_recycler_view.xml
+++ b/app/src/main/res/drawable/frame_recycler_view.xml
@@ -5,7 +5,11 @@
         android:radius="5dp"
         />
     <solid
-        android:color="@color/colorBlue"
+        android:color="@color/transparent"
+        />
+    <stroke
+        android:width="1dp"
+        android:color="@color/colorBlack"
         />
 
 </shape>
