--- a/app/src/main/res/layout/explore_course_recycler_card.xml
+++ b/app/src/main/res/layout/explore_course_recycler_card.xml
@@ -1,145 +1,242 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<!--
+<androidx.cardview.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="horizontal"
-    android:id="@+id/rlCourseFullCard"
-    android:theme="@style/AppTheme">
-    <LinearLayout
-        android:layout_width="wrap_content"
+    app:cardCornerRadius="10dp"
+    app:cardElevation="12dp"
+    android:layout_margin="3dp">
+    <RelativeLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_toStartOf="@id/courseCard"
-        android:layout_alignParentStart="true"
-        android:orientation="vertical"
-        android:id="@+id/cardInfo"
-        android:layout_marginHorizontal="@dimen/activity_horizontal_margin">
-        <TextView
-            android:id="@+id/courseName"
+        android:orientation="horizontal"
+        android:id="@+id/rlCourseFullCard"
+        android:theme="@style/AppTheme">
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/course_name"
-            android:textSize="@dimen/text_margin"
-            android:textStyle="bold"
-            android:typeface="sans"
-            android:gravity="center_vertical"/>
-        <TextView
-            android:id="@+id/courseInstructor"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/app_name"
-            android:textSize="14sp"
-            android:textStyle="italic"
-            android:typeface="serif"
-            android:gravity="center_vertical"/>
-        <TextView
-            android:id="@+id/courseMode"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/online"
-            android:textSize="14sp"
-            android:textStyle="italic"
-            android:typeface="serif"
-            android:gravity="center_vertical"/>
-        <TextView
-            android:id="@+id/courseFee"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/free"
-            android:textSize="14sp"
-            android:textStyle="italic"
-            android:typeface="serif"
-            android:gravity="center_vertical"/>
-        <TextView
-            android:id="@+id/courseRating"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="3.7/5"
-            android:textSize="14sp"
-            android:textStyle="italic"
-            android:typeface="serif"
-            android:gravity="center_vertical"
-            android:drawableEnd="@drawable/icon_star_dark"
-            android:drawableTint="@color/colorPrimary"
-            android:drawablePadding="10dp"/>
-    </LinearLayout>
-    <androidx.cardview.widget.CardView
-        android:id="@+id/courseCard"
-        android:layout_width="105dp"
-        android:layout_height="84dp"
-        app:cardCornerRadius="10dp"
-        app:cardElevation="12dp"
-        android:layout_alignParentEnd="true"
-        android:layout_margin="@dimen/activity_horizontal_margin">
+            android:layout_toStartOf="@id/courseImage"
+            android:layout_alignParentStart="true"
+            android:orientation="vertical"
+            android:id="@+id/cardInfo"
+            android:layout_marginHorizontal="@dimen/activity_horizontal_margin">
+            <TextView
+                android:id="@+id/courseName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/course_name"
+                android:textSize="@dimen/text_margin"
+                android:textStyle="bold"
+                android:typeface="sans"
+                android:gravity="center_vertical"/>
+            <TextView
+                android:id="@+id/courseInstructor"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/app_name"
+                android:textSize="14sp"
+                android:textStyle="italic"
+                android:typeface="serif"
+                android:gravity="center_vertical"/>
+            <TextView
+                android:id="@+id/courseMode"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/online"
+                android:textSize="14sp"
+                android:textStyle="italic"
+                android:typeface="serif"
+                android:gravity="center_vertical"/>
+            <TextView
+                android:id="@+id/courseFee"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/free"
+                android:textSize="14sp"
+                android:textStyle="italic"
+                android:typeface="serif"
+                android:gravity="center_vertical"/>
+            <TextView
+                android:id="@+id/courseRating"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="3.7/5"
+                android:textSize="14sp"
+                android:textStyle="italic"
+                android:typeface="serif"
+                android:gravity="center_vertical"
+                android:drawableEnd="@drawable/icon_star_dark"
+                android:drawableTint="@color/colorPrimary"
+                android:drawablePadding="10dp"/>
+        </LinearLayout>
         <ImageView
             android:id="@+id/courseImage"
             android:layout_width="105dp"
             android:layout_height="84dp"
             android:scaleType="centerCrop"
-            tools:ignore="ContentDescription"/>
-    </androidx.cardview.widget.CardView>
-</RelativeLayout>
+            tools:ignore="ContentDescription"
+            android:layout_alignParentEnd="true"
+            android:layout_margin="@dimen/activity_horizontal_margin"/>
+    </RelativeLayout>
 
-<!--
-<TextView
-                android:id="@+id/courseName"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/courseImage"
-                android:text="@string/course_name"
-                android:textColor="@color/colorPrimaryDark"
-                android:textSize="@dimen/text_margin"
-                android:textStyle="bold"
-                android:typeface="serif"
-                android:gravity="center"
-                android:paddingHorizontal="@dimen/activity_horizontal_margin"
-                android:paddingVertical="5dp"/>
-            <TextView
-                android:id="@+id/courseGenre"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/courseName"
-                android:text="Productivity, Science, Knowledge"
-                android:textColor="@color/colorPrimaryDark"
-                android:textSize="@dimen/text_margin"
-                android:textStyle="italic"
-                android:typeface="serif"
-                android:gravity="center"
-                android:paddingHorizontal="@dimen/activity_horizontal_margin"
-                android:paddingVertical="5dp"/>
+</androidx.cardview.widget.CardView> -->
+
+<androidx.cardview.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    app:cardCornerRadius="10dp"
+    app:cardElevation="8dp"
+    android:layout_marginHorizontal="10dp"
+    android:layout_marginVertical="3dp"
+    android:id="@+id/cvCourseCard"
+    android:animateLayoutChanges="true">
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="90dp"
+            android:id="@+id/header">
+            <androidx.cardview.widget.CardView
+                android:layout_width="105dp"
+                android:layout_height="84dp"
+                app:cardCornerRadius="5dp"
+                android:layout_margin="10dp"
+                android:id="@+id/cv">
+                <ImageView
+                    android:id="@+id/courseImage"
+                    android:layout_width="105dp"
+                    android:layout_height="84dp"
+                    android:scaleType="centerCrop"
+                    tools:ignore="ContentDescription"
+                    android:src="@drawable/background"/>
+            </androidx.cardview.widget.CardView>
+            <View
+                android:layout_width="1dp"
+                android:layout_height="match_parent"
+                android:layout_toEndOf="@id/cv"
+                android:id="@+id/divider"
+                android:background="@color/colorGrey"
+                android:layout_marginVertical="5dp"/>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:layout_below="@id/courseGenre"
-                android:weightSum="100">
+                android:layout_toEndOf="@id/divider"
+                android:layout_marginHorizontal="5dp"
+                android:weightSum="100"
+                android:id="@+id/name_and_rating"
+                android:paddingStart="10dp">
                 <TextView
-                    android:id="@+id/courseMode"
+                    android:id="@+id/courseName"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="@string/online"
-                    android:textColor="@color/colorPrimaryDark"
-                    android:textSize="@dimen/text_margin"
+                    android:text="@string/course_name"
+                    android:autoSizeTextType="uniform"
+                    android:maxLines="1"
+                    android:textSize="20sp"
+                    android:textStyle="bold"
+                    android:typeface="sans"
+                    android:gravity="center_vertical"
+                    android:paddingVertical="10dp"
+                    android:layout_weight="30"/>
+                <TextView
+                    android:id="@+id/courseRating"
+                    android:layout_width="match_parent"
+                    android:layout_weight="70"
+                    android:layout_height="wrap_content"
+                    android:text="3.7/5"
+                    android:autoSizeTextType="uniform"
+                    android:autoSizeMaxTextSize="14sp"
+                    android:maxLines="1"
+                    android:textSize="14sp"
                     android:textStyle="italic"
                     android:typeface="serif"
-                    android:gravity="center"
-                    android:paddingHorizontal="@dimen/activity_horizontal_margin"
-                    android:paddingVertical="5dp"
-                    android:layout_weight="50"/>
+                    android:gravity="center_vertical"
+                    android:drawablePadding="10dp"
+                    app:drawableEndCompat="@drawable/icon_star_dark"
+                    app:drawableTint="@color/colorPrimary"/>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal"
+                android:layout_toEndOf="@id/divider"
+                android:layout_marginHorizontal="5dp"
+                android:layout_below="@id/name_and_rating"
+                android:paddingStart="10dp">
                 <TextView
                     android:id="@+id/courseFee"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_weight="15"
+                    android:layout_height="match_parent"
                     android:text="@string/free"
-                    android:textColor="@color/colorPrimaryDark"
                     android:textSize="@dimen/text_margin"
                     android:textStyle="italic"
                     android:typeface="serif"
-                    android:gravity="center"
-                    android:paddingHorizontal="@dimen/activity_horizontal_margin"
-                    android:paddingVertical="5dp"
-                    android:layout_weight="50"/>
+                    android:gravity="center_vertical"/>
+                <ImageButton
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="85"
+                    android:src="@drawable/icon_down"
+                    android:tint="@color/colorPrimary"
+                    android:backgroundTint="@color/transparent"
+                    tools:ignore="ContentDescription"
+                    android:id="@+id/toggle"/>
             </LinearLayout>
--->
+        </RelativeLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:id="@+id/cardInfo"
+            android:layout_below="@id/header">
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/colorGrey"
+                android:id="@+id/divider2"/>
+            <TextView
+                android:id="@+id/courseInstructor"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="10dp"
+                android:text="@string/app_name"
+                android:textSize="@dimen/text_margin"
+                android:textStyle="italic"
+                android:typeface="serif"
+                android:gravity="center_vertical"/>
+            <TextView
+                android:id="@+id/courseMode"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="10dp"
+                android:text="@string/offline"
+                android:textSize="@dimen/text_margin"
+                android:textStyle="italic"
+                android:typeface="serif"
+                android:gravity="center_vertical"/>
+            <TextView
+                android:id="@+id/courseDistance"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="10dp"
+                android:text="About 10 kilomteres from your location"
+                android:textSize="@dimen/text_margin"
+                android:textStyle="italic"
+                android:typeface="serif"
+                android:gravity="center_vertical"
+                android:drawablePadding="10dp"
+                app:drawableStartCompat="@drawable/icon_location"
+                app:drawableTint="@color/colorPrimary" />
+        </LinearLayout>
+    </RelativeLayout>
+
+</androidx.cardview.widget.CardView>
