--- a/app/src/main/res/layout/signup.xml
+++ b/app/src/main/res/layout/signup.xml
@@ -4,8 +4,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+    android:theme="@style/Theme.AppCompat.Light.NoActionBar"
+    android:background="@drawable/background">
 
+    <!--
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -17,7 +19,7 @@
         android:layout_height="match_parent"
         android:background="@color/colorPrimaryDark"
         android:layout_alignTop="@id/linearLayout2"
-        android:layout_marginTop="12dp"/>
+        android:layout_marginTop="12dp"/> -->
 
     <ProgressBar
         android:id="@+id/loadingSignUp"
