--- a/app/src/main/res/layout/activity_explore_courses.xml
+++ b/app/src/main/res/layout/activity_explore_courses.xml
@@ -4,15 +4,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-    <ProgressBar
-        android:id="@+id/loadingExplore"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="6dp"
-        android:visibility="gone"
-        android:layout_centerHorizontal="true"
-        android:indeterminateTint="@color/colorPrimary"/>
 
     <com.google.android.material.tabs.TabLayout
         android:layout_width="match_parent"
@@ -75,13 +66,22 @@
             app:singleLine="true">
         </com.google.android.material.chip.ChipGroup>
     </HorizontalScrollView>
-
+    <ProgressBar
+        android:id="@+id/loadingExplore"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="6dp"
+        android:layout_below="@id/scroller"
+        android:visibility="gone"
+        android:layout_centerHorizontal="true"
+        android:indeterminateTint="@color/colorPrimary"/>
 
     <androidx.viewpager.widget.ViewPager
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/viewPager"
-        android:layout_below="@id/scroller"
+        android:layout_below="@id/loadingExplore"
         android:isScrollContainer="true"/>
     <!-- this one was a page index : may be needed later on ====
     <LinearLayout
