--- a/app/src/main/res/layout/activity_setup_3.xml
+++ b/app/src/main/res/layout/activity_setup_3.xml
@@ -42,10 +42,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/textSelectYourCollege"
-                android:dropDownSelector="@drawable/add_icon_24"
-                android:background="@drawable/text_view_add_course"
+                android:dropDownWidth="wrap_content"
                 android:backgroundTint="@color/colorAccent"
-                tools:listitem="@layout/support_simple_spinner_dropdown_item"/>
+                tools:listitem="@layout/simple_spinner_dark_text_color"/>
 
             <EditText
                 android:layout_width="match_parent"
@@ -70,7 +69,7 @@
                 android:layout_below="@id/cityNameHolder"
                 android:id="@+id/pincodeHolder"
                 android:inputType="number"
-                android:layout_marginTop="12dp"
+                android:layout_marginTop="8dp"
                 android:layout_marginStart="72dp"
                 android:layout_marginEnd="72dp"
                 android:hint="@string/enter_pincode"
@@ -90,7 +89,7 @@
                 android:textSize="@dimen/text_margin"
                 android:gravity="center"
                 android:layout_below="@id/pincodeHolder"
-                android:layout_margin="@dimen/activity_vertical_margin"
+                android:layout_margin="4dp"
                 android:id="@+id/textSetupTitle5" />
 
             <LinearLayout
@@ -109,7 +108,6 @@
                     android:id="@+id/user_data_setup_google_location"
                     android:clickable="true"
                     android:focusable="true" />
-
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
@@ -118,7 +116,7 @@
                     android:textColor="@color/colorYellow"
                     android:textSize="@dimen/text_margin"
                     android:textStyle="bold"
-                    android:layout_marginTop="10dp"/>
+                    android:layout_marginTop="5dp"/>
             </LinearLayout>
 
             <TextView
@@ -130,7 +128,7 @@
                 android:text="@string/why_should_i_share_my_location"
                 android:textStyle="italic"
                 android:gravity="center"
-                android:layout_marginTop="48dp"
+                android:layout_marginTop="12dp"
                 android:textSize="@dimen/text_margin"
                 android:drawableStart="@drawable/info_icon"
                 android:drawablePadding="5dp"
@@ -167,10 +165,8 @@
                 android:text="@string/we_never_share_these_details_without_your_permission"
                 android:textStyle="italic"
                 android:gravity="center"
-                android:layout_marginTop="48dp"
                 android:textSize="@dimen/text_margin"
-                android:layout_marginStart="@dimen/activity_horizontal_margin"
-                android:layout_marginEnd="@dimen/activity_horizontal_margin"
+                android:layout_margin="@dimen/activity_horizontal_margin"
                 android:layout_centerInParent="true"/>
 
         </RelativeLayout>
