Customised Reset Password

--- a/app/src/main/res/layout/activity_reset_password.xml
+++ b/app/src/main/res/layout/activity_reset_password.xml
@@ -4,28 +4,54 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ResetPasswordActivity">
+    tools:context=".ResetPasswordActivity"
+    android:background="@drawable/background">
 
-    <TextView
+    <ProgressBar
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Reseting Your Password"
-        android:textSize="25dp"
-        android:id="@+id/reset_password"
-        android:layout_centerInParent="true"/>
+        android:layout_centerHorizontal="true"
+        android:indeterminateTint="@color/colorAccent"
+        android:id="@+id/loadingResetPassword"
+        android:visibility="gone"
+        android:layout_margin="10dp"/>
 
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/new_password"
-        android:layout_below="@+id/reset_password"
-        android:layout_centerInParent="true"/>
+        android:layout_margin="@dimen/activity_horizontal_margin"
+        android:layout_below="@id/loadingResetPassword"
+        android:background="@drawable/text_view_login"
+        android:padding="16dp"
+        android:textColor="@color/colorWhite"
+        android:textColorHint="@color/colorLiteGrey"
+        android:hint="@string/prompt_password"
+        android:textSize="@dimen/text_margin"
+        android:inputType="textPassword"/>
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/new_password_confirm"
+        android:layout_below="@id/new_password"
+        android:layout_margin="@dimen/activity_horizontal_margin"
+        android:background="@drawable/text_view_login"
+        android:padding="16dp"
+        android:textColor="@color/colorWhite"
+        android:textColorHint="@color/colorLiteGrey"
+        android:hint="@string/confirm_password"
+        android:textSize="@dimen/text_margin"
+        android:inputType="textPassword"/>
 
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/submit_password"
         android:text="Reset Password"
-        android:layout_below="@+id/new_password"/>
+        android:layout_below="@+id/new_password_confirm"
+        android:layout_margin="@dimen/activity_horizontal_margin"
+        android:background="@drawable/btn_rounded_rect"
+        android:textColor="@color/colorBlack"
+        android:textSize="@dimen/text_margin"/>
 
 </RelativeLayout>
