--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -141,7 +141,7 @@
         android:layout_marginTop="12dp"
         android:visibility="gone"
         android:layout_centerHorizontal="true"
-        android:indeterminateTint="@color/colorYellow"/>
+        android:indeterminateTint="@color/colorAccent"/>
 
 
 
