Major changes to user data setup

--- a/app/src/main/res/menu/home_drawer_menu.xml
+++ b/app/src/main/res/menu/home_drawer_menu.xml
@@ -22,6 +22,9 @@
         android:title="Upsilon Wallet"
         android:id="@+id/homeDrawerMenuItem6"/>
     <item
+        android:title="Title 7"
+        android:id="@+id/homeDrawerMenuItem7"/>
+    <item
         android:title="@string/more"
         android:id="@+id/more">
         <menu>
