--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,7 +6,6 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background"
     tools:context=".ui.login.LoginActivity">
     <!--<FrameLayout
         android:layout_width="match_parent"
@@ -29,12 +28,13 @@
         android:layout_marginTop="64dp"
         android:autofillHints="Email"
         android:hint="@string/prompt_email"
-        android:textColorHint="@color/colorGrey"
-        android:textColor="@color/colorWhite"
+        android:textColorHint="@color/GreyDark"
+        android:textColor="@color/colorBlack"
         android:inputType="textEmailAddress"
         android:selectAllOnFocus="true"
         android:layout_gravity="center_horizontal"
         android:background="@drawable/text_view_login"
+        android:backgroundTint="@color/colorBlack"
         android:padding="12dp"/>
 
     <EditText
@@ -46,7 +46,7 @@
         android:layout_marginEnd="24dp"
         android:layout_below="@id/username"
         android:hint="@string/prompt_password"
-        android:textColorHint="@color/colorGrey"
+        android:textColorHint="@color/GreyDark"
         android:textColor="@color/colorWhite"
         android:imeActionLabel="@string/action_sign_in_short"
         android:imeOptions="actionDone"
@@ -54,6 +54,7 @@
         android:selectAllOnFocus="true"
         android:autofillHints="Password"
         android:background="@drawable/text_view_login"
+        android:backgroundTint="@color/colorBlack"
         android:padding="12dp"/>
     <CheckBox
         android:id="@+id/checkRememberMe"
@@ -61,10 +62,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
         android:text="@string/remember_me"
-        android:textColor="@color/colorWhite"
         android:textSize="@dimen/text_margin"
         android:layout_below="@id/password"
-        android:buttonTint="@color/colorWhite"
         android:layout_marginHorizontal="24dp"
         android:paddingHorizontal="12dp"/>
 
@@ -74,7 +73,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         android:text="@string/forgot_password"
-        android:textColor="@color/colorWhite"
+        android:textColor="@color/colorPrimary"
         android:layout_below="@id/checkRememberMe"
         android:layout_centerHorizontal="true"/>
 
@@ -86,8 +85,9 @@
         android:layout_marginTop="12dp"
         android:layout_marginBottom="48dp"
         android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
-        android:background="@drawable/btn_rounded_rect"
-        android:backgroundTint="@color/colorAccent"
+        android:background="@drawable/btn_blue"
+        android:textColor="@color/colorWhite"
+        android:letterSpacing="0.1"
         android:enabled="true"
         android:text="@string/action_sign_in"
         android:layout_below="@id/textView3"/>
@@ -104,8 +104,7 @@
             android:layout_width="0dp"
             android:layout_height="1dp"
             android:layout_marginEnd="12dp"
-            android:background="?android:attr/listDivider"
-            android:backgroundTint="@color/colorWhite"
+            android:background="@color/GreyDark"
             android:layout_weight="9"/>
 
         <TextView
@@ -115,7 +114,7 @@
             android:text="@string/or"
             android:gravity="center"
             android:textSize="@dimen/text_margin"
-            android:textColor="@color/colorWhite"
+            android:textColor="@color/colorBlack"
             android:layout_weight="2"/>
 
         <View
@@ -123,9 +122,8 @@
             android:layout_width="0dp"
             android:layout_height="1dp"
             android:layout_marginStart="12dp"
-            android:background="?android:attr/listDivider"
+            android:background="@color/GreyDark"
             app:layout_constraintHorizontal_bias="1.0"
-            android:backgroundTint="@color/colorWhite"
             android:layout_weight="9"/>
     </LinearLayout>
 
@@ -222,9 +220,9 @@
         android:id="@+id/divider3"
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="?android:attr/listDivider"
-        android:layout_above="@id/signUp"
-        android:backgroundTint="@color/colorWhite"/>
+        android:background="@color/GreyDark"
+        android:layout_below="@id/linearLayout"
+        android:layout_marginTop="48dp"/>
 
     <Button
         android:id="@+id/signUp"
@@ -233,11 +231,11 @@
         android:layout_marginTop="24dp"
         android:layout_marginBottom="24dp"
         android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
-        android:background="@drawable/btn_rounded_rect"
-        android:backgroundTint="@color/colorAccent"
+        android:background="@drawable/btn_blue"
         android:text="@string/signup_text"
-        android:layout_alignParentBottom="true"
-        android:textColor="@color/colorBlack"/>
+        android:layout_below="@id/divider3"
+        android:textColor="@color/colorWhite"
+        android:letterSpacing="0.1"/>
 
 
 
