--- a/app/src/main/res/layout/activity_user_data_setup.xml
+++ b/app/src/main/res/layout/activity_user_data_setup.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".UserDataSetupActivity">
+    tools:context=".UserDataSetupActivity"
+    android:background="@color/colorWhite">
 
     <androidx.viewpager.widget.ViewPager
         android:layout_width="match_parent"
@@ -18,8 +19,8 @@
         android:layout_above="@id/layout_buttons"
         android:layout_centerHorizontal="true"
         android:layout_margin="@dimen/activity_horizontal_margin"
-        android:scaleX="4"
-        android:scaleY="4"
+        android:scaleX="3"
+        android:scaleY="3"
         android:id="@+id/dot_progress"
         android:backgroundTint="@color/colorAccent"/>
 
@@ -38,9 +39,9 @@
             android:text="@string/skip_setup"
             android:textSize="@dimen/text_margin"
             android:textAllCaps="true"
-            android:textColor="@color/colorWhite"
+            android:textColor="@color/colorBlack"
             android:textStyle="bold"
-            android:background="@drawable/btn_blue"
+            android:background="@color/transparent"
             android:padding="10dp"
             android:elevation="5dp"
             android:layout_weight="25"
@@ -53,9 +54,9 @@
             android:text="@string/next"
             android:textSize="@dimen/text_margin"
             android:textAllCaps="true"
-            android:textColor="@color/colorWhite"
+            android:textColor="@color/colorBlack"
             android:textStyle="bold"
-            android:background="@drawable/btn_blue"
+            android:background="@color/transparent"
             android:padding="10dp"
             android:elevation="5dp"
             android:layout_weight="25"
