--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
     tools:context=".MainActivity"
     android:id="@+id/drawer_layout"
     tools:openDrawer="left"
-    android:background="@color/colorWhite"
+    android:background="@color/colorPrimaryLight"
     android:fitsSystemWindows="true"
     android:theme="@style/AppTheme">
 
@@ -39,7 +39,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:id="@+id/frameCurrentCourseListView"
-                    app:cardElevation="@dimen/text_margin">
+                    app:cardElevation="8dp">
                     <RelativeLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -71,7 +71,43 @@
                     </RelativeLayout>
                 </androidx.cardview.widget.CardView>
 
+                <androidx.cardview.widget.CardView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/frameRecommendedCourses"
+                    app:cardElevation="8dp"
+                    android:layout_below="@id/frameCurrentCourseListView"
+                    android:layout_marginTop="24dp">
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="#FAFAFA"
+                        android:fitsSystemWindows="true"
+                        android:elevation="?attr/actionBarSize"
+                        android:paddingBottom="5dp">
+                        <TextView
+                            android:id="@+id/textRecommendedCoursesList"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:gravity="center_vertical"
+                            android:text="@string/recommended_for_you"
+                            android:textSize="@dimen/text_margin"
+                            android:textColor="@color/colorPrimary"
+                            android:paddingVertical="5dp"
+                            android:paddingHorizontal="10dp"
+                            android:typeface="sans"/>
+                        <androidx.recyclerview.widget.RecyclerView
+                            android:id="@+id/recommendedCourseListView"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginHorizontal="10dp"
+                            android:orientation="horizontal"
+                            android:scrollbars="horizontal"
+                            android:layout_below="@id/textRecommendedCoursesList"/>
+                    </RelativeLayout>
+                </androidx.cardview.widget.CardView>
 
+                <!--
                 <TextView
                     android:id="@+id/textRecommendedCoursesList"
                     android:layout_width="wrap_content"
@@ -92,7 +128,7 @@
                     android:layout_marginHorizontal="10dp"
                     android:orientation="horizontal"
                     android:scrollbars="horizontal"
-                    android:layout_below="@id/textRecommendedCoursesList"/>
+                    android:layout_below="@id/textRecommendedCoursesList"/> -->
                 <TextView
                     android:id="@+id/textExploreCoursesList"
                     android:layout_width="wrap_content"
@@ -105,18 +141,17 @@
                     android:paddingHorizontal="10dp"
                     android:typeface="sans"
                     android:layout_marginTop="16dp"
-                    android:layout_below="@id/recommendedCourseListView"
+                    android:layout_below="@id/frameRecommendedCourses"
                     android:clickable="true"
                     android:focusable="true"
-                    android:drawableEnd="@drawable/next"
-                    android:drawableTint="@color/colorPrimary"
-                    android:drawablePadding="@dimen/activity_horizontal_margin"/>
+                    android:drawablePadding="@dimen/activity_horizontal_margin"
+                    app:drawableTint="@color/colorPrimary"
+                    app:drawableEndCompat="@drawable/next" />
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/exploreCourseListView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="10dp"
-                    android:orientation="horizontal"
+                    android:orientation="vertical"
                     android:scrollbars="horizontal"
                     android:layout_below="@id/textExploreCoursesList"
                     android:layout_margin="5dp"
