--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,4 +16,5 @@
     <color name="colorError">@color/colorRed</color>
     <color name="transparent">#00000000</color>
     <color name="GreyDark">#555555</color>
+    <color name="colorPrimaryLight">#0D003153</color>
 </resources>
