--- a/app/src/main/res/layout/activity_wallet.xml
+++ b/app/src/main/res/layout/activity_wallet.xml
@@ -5,7 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".WalletActivity"
-    android:background="@color/colorLiteGrey">
+    android:background="@color/colorPrimaryLight">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -17,7 +17,7 @@
             android:layout_margin="10dp"
             app:cardCornerRadius="5dp"
             app:cardBackgroundColor="@color/colorWhite"
-            app:cardElevation="10dp">
+            app:cardElevation="4dp">
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -72,7 +72,7 @@
             android:layout_margin="10dp"
             app:cardCornerRadius="5dp"
             app:cardBackgroundColor="@color/colorWhite"
-            app:cardElevation="10dp">
+            app:cardElevation="4dp">
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -121,7 +121,7 @@
             android:layout_height="wrap_content"
             app:cardCornerRadius="5dp"
             app:cardBackgroundColor="@color/colorWhite"
-            app:cardElevation="10dp">
+            app:cardElevation="4dp">
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
