--- a/app/src/main/res/layout/fragment_user_data_setup1.xml
+++ b/app/src/main/res/layout/fragment_user_data_setup1.xml
@@ -82,6 +82,7 @@
         android:layout_marginStart="72dp"
         android:layout_marginEnd="72dp"
         android:hint="Enter your Interests here"
+        android:textColorHint="@color/GreyDark"
         android:textColor="@color/colorBlack"
         android:gravity="center"
         android:layout_centerInParent="true"
@@ -98,9 +99,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_below="@+id/textEnterInterests"
-        android:layout_marginTop="27dp"
+        android:layout_marginBottom="10dp"
         android:gravity="center"
+        android:layout_alignParentBottom="true"
         android:background="@drawable/btn_blue"
         android:padding="20dp"
         android:text="@string/add_interest"
@@ -109,7 +110,7 @@
     <com.google.android.material.chip.ChipGroup
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/addInterest"
+        android:layout_below="@+id/textEnterInterests"
         android:layout_margin="@dimen/text_margin"
         android:id="@+id/groupInterests"/>
 
